--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <script type="module" src="src/index.js"></script>
   </head>
     <body>
-        <pocket-view name="main"></pocket-view>        
+        <pocket-view name="Pension Fund"></pocket-view>        
     </body>
 </html>
